--- a/spring_06_tx/src/main/webapp/WEB-INF/web.xml
+++ b/spring_06_tx/src/main/webapp/WEB-INF/web.xml
@@ -33,18 +33,34 @@
 
 	<!-- Processes application requests -->
 	<servlet>
-		<servlet-name>oneServlet</servlet-name>
+		<servlet-name>twoServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/dispatch-one.xml</param-value>
+			<param-value>/WEB-INF/spring/appServlet/dispatch-two.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
 	<servlet-mapping>
-		<servlet-name>oneServlet</servlet-name>
-		<url-pattern>*.st</url-pattern>
+		<servlet-name>twoServlet</servlet-name>
+		<url-pattern>*.ss</url-pattern>
 	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>threeServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/dispatch-three.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>threeServlet</servlet-name>
+		<url-pattern>*.se</url-pattern>
+	</servlet-mapping>
+	
 
 </web-app>
