--- a/spring_08_board/src/main/webapp/WEB-INF/web.xml
+++ b/spring_08_board/src/main/webapp/WEB-INF/web.xml
@@ -36,14 +36,14 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>/WEB-INF/spring/appServlet/dispatch-board.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.sb</url-pattern>
 	</servlet-mapping>
 
 </web-app>
