--- a/spring11_rest_client/.project
+++ b/spring11_rest_client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring11_rest_client</name>
+	<name>spring_11_rest_client</name>
 	<comment></comment>
 	<projects>
 	</projects>
